--- a/style.css
+++ b/style.css
@@ -2,14 +2,28 @@
     box-sizing: border-box;
 }
 
+body {
+    padding: 0 10px;
+}
+
 #homepage {
     background-color: whitesmoke;
+}
+
+.recipe {
+    background-color: rgb(250, 216, 255);
 }
 
 h1 {
     text-align: center;
     color: black;
     text-shadow: 0 0 1px;
+}
+
+h2 {
+    text-align: center;
+    color: black;
+    text-shadow: 0 0 0.5px;
 }
 
 .recipe-list {
@@ -42,4 +56,11 @@ a {
 
 .recipe-list li, a {
     background-color: rgb(176, 115, 184);
+}
+
+img {
+    display: block;
+    margin: 40px auto;
+    border: 2px solid black;
+    border-radius: 10px;
 }
